objects/Maintenance_Request__c.object
<CustomObject>
    <description>A maintenance request raised for a property and assigned to a vendor.</description>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Maintenance Requests</relationshipLabel>
        <relationshipName>Maintenance_Requests</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor</label>
        <referenceTo>Vendor__c</referenceTo>
        <relationshipLabel>Maintenance Requests</relationshipLabel>
        <relationshipName>Maintenance_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Maintenance Request</label>
    <listViews>
        <fullName>All_Maintenance_Requests</fullName>
        <columns>NAME</columns>
        <columns>Property__c</columns>
        <columns>Vendor__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Maintenance Requests</label>
    </listViews>
    <nameField>
        <displayFormat>MR-{00000}</displayFormat>
        <label>Maintenance Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Maintenance Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>